<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smartsock.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.smartsock.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.smartsock.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_graph"
        android:name="com.example.smartsock.Graph_Fragment"
        android:label="Graph"
        tools:layout="@layout/fragment_graph_" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.smartsock.Account_Fragment"
        android:label="Account"
        tools:layout="@layout/fragment_account_" />

    <fragment
        android:id="@+id/nav_gradient"
        android:name="com.example.smartsock.Gradient_Fragment"
        android:label="Gradient"
        tools:layout="@layout/fragment_gradient_" />
    <fragment
        android:id="@+id/battery_Fragment"
        android:name="com.example.smartsock.battery_Fragment"
        android:label="Battery"
        tools:layout="@layout/fragment_battery_" />


</navigation>