<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.SignupTabFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signup_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_signup_message"
        android:textColor="#696969"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signup_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signup"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_shape"
        android:text="@string/button_sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/md_blue_900"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DOB" />

    <EditText
        android:id="@+id/DOB"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_text_boxes"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/hint_DOB"
        android:imeOptions="actionNext"
        android:minWidth="320dp"
        android:minHeight="50dp"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password" />

    <EditText
        android:id="@+id/signup_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signup_gender"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/login_text_boxes"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:hint="@string/hint_confirm_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:minWidth="320dp"
        android:minHeight="50dp"
        android:paddingLeft="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signup_confirm_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/login_text_boxes"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:hint="@string/hint_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:minWidth="320dp"
        android:minHeight="50dp"
        android:paddingLeft="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_phone" />

    <EditText
        android:id="@+id/signup_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signup_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/login_text_boxes"
        android:drawableStart="@drawable/ic_phone"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="12dp"
        android:hint="@string/hint_phone"
        android:imeOptions="actionNext"
        android:minWidth="320dp"
        android:minHeight="50dp"
        android:paddingLeft="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/signup_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/login_text_boxes"
        android:drawableStart="@drawable/ic_person"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:hint="@string/hint_username"
        android:imeOptions="actionNext"
        android:minWidth="320dp"
        android:minHeight="50dp"
        android:paddingLeft="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signup_phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/login_text_boxes"
        android:drawableStart="@drawable/ic_mail"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="12dp"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:minWidth="320dp"
        android:minHeight="50dp"
        android:paddingLeft="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_gender"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/DOB"
        android:background="@drawable/login_text_boxes"
        android:drawablePadding="12dp"
        android:gravity="center"
        android:hint="@string/hint_gender"
        android:imeOptions="actionNext"
        android:minWidth="320dp"
        android:minHeight="50dp"
        android:paddingLeft="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_above="@+id/signup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"

        android:layout_marginBottom="10dp"
        android:text="Clinician"
        android:textSize="15dp" />

    <CheckBox
        android:id="@+id/other"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_above="@+id/signup"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/checkBox2"
        android:text="Other"
        android:textSize="15dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_above="@+id/signup"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/checkBox"
        android:text="Patient"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="9dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="Select if you are a patient or a clinician:" />

</RelativeLayout>